# python-win-windows-manager

./: README.md  main.py  pyproject.toml
docs/: API.md
examples/: demo.py
src/window_manager/: __init__.py  core.py  models.py  monitor.py  utils.py
tests/: test_core.py  test_monitor.py
