[project]
name = "python-win-windows-manager"
version = "0.1.0"
description = "Window manager and monitor for Windows"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "psutil>=7.2.2",
    "pywin32>=311",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
[project.urls]
"Homepage" = "https://github.com/a497823463/python-win-windows-manager.git"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/window_manager"]
